--- a/index.html
+++ b/index.html
@@ -72,11 +72,13 @@
 											<div class="content">
 												<h3>Linguagens de Programação e Banco de Dados </h3>
 												<ul>
-													<li>Python com foco em análise de dados.</li>
+													<li>Python com foco em análise de dados</li>
+													<li>Pensamento Estratégico</li>
 													<!-- comentario <li>Web scraping com Python.</li> -->
-													<li>SQL para extração de dados.</li>
-													<!-- <li>R para modelagem estatística.</li> -->
-													<li>Banco de Dados SQLite, MySQL <!-- , Postres, MySQL, Oracle, MongoDB e Cassandra.</li> -->
+													<li>Conceito de ETL</li>
+													<li>SQL Language</li>
+													<!-- <li>R para modelagem estatística</li> -->
+													<li>Banco de Dados SQLite, MySQL <!-- , Postres, MySQL, Oracle, MongoDB e Cassandra </li> -->
 											 </ul>
 											</div>
 										</article>
@@ -98,7 +100,8 @@
 											<div class="content">
 												<h3>Visualização de Dados </h3>
 												<ul>
-													<li>Matplotlib, Seaborn, Plotly e Bokeh.</li>
+													<li>Matplotlib, Seaborn, Plotly e <!--Bokeh --> </li>
+													<li>Streamilit</li>
 													<li>Power BI, <!--Tableau, Metabase e Looker.</li> -->
 											 </ul>
 											</div>
@@ -109,7 +112,8 @@
 												<h3>Engenharia de Software </h3>
 												<ul>
 													<li>Git, Github, Gitlab <!-- , Cookiecutter, --> Virtual Environment <!-- e Docker.</li> -->
-													<li>Streamlit <!-- , Flask, Python API's.</li> -->
+													<li>Streamlit Cloud <!-- , Flask, Python API's.</li> -->
+													<li>SQLite3 Database </li>
 													<!-- <li>Cloud Heroku, AWS Amazon, Google Cloud Platform ( GCP ) e Azure.</li> -->
 											 </ul>
 											</div>
