Update SGL skills on index.html
Acabei de atualizar a secção de habilidades com novas habilidades em SQL junto com o banco de dados SQLite3.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 												<ul>
 													<li>Matplotlib, Seaborn, Plotly e <!--Bokeh --> </li>
 													<li>Streamilit</li>
-													<li>Power BI, <!--Tableau, Metabase e Looker.</li> -->
+													<li> <!-- Power BI,Tableau, Metabase e Looker.</li> -->
 											 </ul>
 											</div>
 										</article>
