--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 											<div class="content">
 												<h3>Visualização de Dados </h3>
 												<ul>
-													<li>Matplotlib, Seaborn, Plotly e <!--Bokeh --> </li>
+													<li>Matplotlib, Seaborn, Plotly <!-- e Bokeh --> </li>
 													<li>Streamilit</li>
 													<li> <!-- Power BI,Tableau, Metabase e Looker.</li> -->
 											 </ul>
@@ -130,7 +130,7 @@
 											<h2 id="content">4+ Projetos completos de Ciência de Dados</h2>
 											<p>Construção de soluções de dados para problemas de negócio, próximos dos desafios reais das empresas, utilizando dados públicos de competições de Ciência de Dados, onde eu abordei o problema desde a concepção do desafio de negócio até a publicação do algoritmo treinado em produção, utilizando ferramentas de Cloud Computing.</p>
 
-											<h2 id="content">10+ anos como Professora e Coordenadora de Tecnologias de Informação e Comunicação, Programação e Aplicações Informáticas (4 anos)</h2>
+											<h2 id="content">10+ anos como Professora e Coordenadora de Tecnologias de Informação e Comunicação, Programação e Aplicações Informáticas (5 anos) </h2>
 											<p>Ensino de programas básicos do aplicações do office, base de dados, programas multimédias e Programação.</p>
                                             </p>Participação, realização e promoção das atividades realizadas na escola no âmbito da comemoração dos dias de Ciências e Tecnologias e afins.</p>
                                            
@@ -142,6 +142,26 @@
 										<h1>Projetos em Ciência de Dados</h1>
 									</header>
 									<div class="posts">
+										<article>
+											<a href="#" class="image"><img src="images/fooddelivery.jpg" alt="" /></a>
+											<h3>Desenvolvimento de um Painel Gerencial para Marketplace de Entregas com Stremlit.</h3>
+											<p> Nesse projeto, os conceitos de Programação em Python, manipulação de dados, pensamento estratégico e lógica de negócio, junto com ferramentas de desenvolvimento web como o Streamlit e Github, foram usados para desenvolver um painel gerencial com as principais métricas de uma empresa marketplace de delivery de comida na India.</p>
+											<p>O resultado final do projeto foi um painel hospedado em um ambiente Cloud e disponibilizado através de um link web. O painel pode ser acessado por qualquer dispositivo conectado na internet.</p>
+											<h4>As ferramentas utilizadas foram:</h4>
+											<ul>
+												<li>Python.</li>
+												<li>Jupyter Lab.</li>
+												<li>Terminal.</li>
+												<li>Streamlit</li>
+												<li>Streamlit Cloud.</li>
+												<li>Github.</li>
+											</ul>
+
+											<ul class="actions">
+												<li><a href="#" class="button">Saiba Mais</a></li>
+											</ul>
+										</article>
+										
 										<article>
 											<a href="#" class="image"><img src="images/projeto2.jpg" alt="" /></a>
 											<h3>Construção de um programa de fidelidade com clusterização de clientes.</h3>
